--- a/WebApplication2/Views/Instructor/Index.cshtml
+++ b/WebApplication2/Views/Instructor/Index.cshtml
@@ -50,16 +50,16 @@
           <div class="nav-item" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Category
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
+                        <!--   <li class="nav-item dropdown">
+                                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                              Category
+                                          </a>
+                                          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                              <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Action</a></li>
+                                              <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Another action</a></li>
+                                              <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Something else here</a></li>
+                                          </ul>
+                                      </li>-->
 
               <li class="text-end pe-4 me-4 border-dark search-btn">
                             <div class="search-form">
@@ -75,22 +75,24 @@
               </li>
 
              <li class="nav-item ">
-                 <a class="nav-link" href="../Views/Instructor/MyCourses.cshtml">My Courses
+                            <a class="nav-link" asp-controller="Instructor" asp-action="MyCourses">
+                                My Courses
                  </a>
               </li> 
              
             
               
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">Add Course
+                            <a class="nav-link" asp-controller="Instructor" asp-action="AddCourse">
+                                Add Course
                 </a>
               </li> 
              
               <li class="nav-item">
-                <a href="../Laern consult project/login.html" class="nav-link" role="button" data-bs-toggle="button">Signout</a>
+                            <a class="nav-link" asp-controller="Instructor" asp-action="Signout">Signout</a>
               </li>
               <li class="nav-item">
-                <a href="../Laern consult project/signup.html" class="nav-link" role="button" data-bs-toggle="button">Profile</a>
+                            <a class="nav-link" asp-controller="Instructor" asp-action="Profile">Profile</a>
               </li>
             </ul>
          
