--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -54,13 +54,13 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Category
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Action</a></li>
+                  <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Another action</a></li>
+                  <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Something else here</a></li>
                 </ul>
               </li>
 
@@ -83,10 +83,10 @@
               </li> 
               
               <li class="nav-item">
-                <a href="../templatemo_546_sixteen_clothing/login.html" class="nav-link" role="button" data-bs-toggle="button">Login</a>
+                            <a asp-controller="home" asp-action="Login" class="nav-link" role="button" data-bs-toggle="button">Login</a>
               </li>
               <li class="nav-item">
-                <a href="../templatemo_546_sixteen_clothing/signup.html" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
+                            <a asp-controller="home" asp-action="Sign up" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
               </li>
             </ul>
          
