--- a/WebApplication2/Views/Home/Search.cshtml
+++ b/WebApplication2/Views/Home/Search.cshtml
@@ -63,12 +63,12 @@
 
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Dropdown
+                                Category
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Action</a></li>
+                          <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Another action</a></li>
+                          <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Something else here</a></li>
                         </ul>
                       </li>
 
@@ -83,10 +83,10 @@
                       </li> 
               
                       <li class="nav-item">
-                        <a href="../templatemo_546_sixteen_clothing/login.html" class="nav-link" role="button" data-bs-toggle="button">Login</a>
+                            <a asp-controller="home" asp-action="Login" class="nav-link" role="button" data-bs-toggle="button">Login</a>
                       </li>
                       <li class="nav-item">
-                        <a href="../templatemo_546_sixteen_clothing/signup.html" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
+                            <a asp-controller="home" asp-action="Sign up" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
                       </li>
                     </ul>
          
@@ -275,7 +275,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><button class="btn btn-light "> Review </button>
+                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -288,7 +288,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><button class="btn btn-light "> Review </button>
+                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -301,7 +301,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><button class="btn btn-light "> Review </button>
+                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -314,7 +314,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><button class="btn btn-light "> Review </button>
+                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -327,7 +327,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><button class="btn btn-light "> Review </button>
+                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -340,7 +340,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><button class="btn btn-light "> Review </button>
+                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -353,7 +353,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><button class="btn btn-light "> Review </button>
+                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -366,7 +366,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><button class="btn btn-light "> Review </button>
+                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
