--- a/WebApplication2/Views/_ViewImports.cshtml
+++ b/WebApplication2/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using first
-@using first.Models
+﻿@using WebApplication2
+@using WebApplication2.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
