--- a/WebApplication2/Views/Home/Category.cshtml
+++ b/WebApplication2/Views/Home/Category.cshtml
@@ -88,7 +88,7 @@
                       </li> 
               
                       <li class="nav-item">
-                            <a asp-controller="home" asp-action="Login" class="nav-link" role="button" data-bs-toggle="button">Login</a>
+                            <a asp-controller="home" asp-action="Login" class="nav-link">Login</a>
                       </li>
                       <li class="nav-item">
                             <a asp-controller="home" asp-action="Sign up" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
@@ -151,7 +151,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -164,7 +164,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -177,7 +177,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                   <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -190,7 +190,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -203,7 +203,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                  <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -216,7 +216,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a> <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -229,7 +229,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                     <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -242,7 +242,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                  <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a> <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
