--- a/WebApplication2/Views/Home/Course.cshtml
+++ b/WebApplication2/Views/Home/Course.cshtml
@@ -79,7 +79,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a asp-controller="home" asp-action="Login" class="nav-link" role="button" data-bs-toggle="button">Login</a>
+                            <a asp-controller="home" asp-action="Login" class="nav-link">Login</a>
                         </li>
                         <li class="nav-item">
                             <a asp-controller="home" asp-action="Sign up" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
