--- a/WebApplication2/Views/Home/Search.cshtml
+++ b/WebApplication2/Views/Home/Search.cshtml
@@ -83,7 +83,7 @@
                       </li> 
               
                       <li class="nav-item">
-                            <a asp-controller="home" asp-action="Login" class="nav-link" role="button" data-bs-toggle="button">Login</a>
+                            <a asp-controller="home" asp-action="Login" class="nav-link">Login</a>
                       </li>
                       <li class="nav-item">
                             <a asp-controller="home" asp-action="Sign up" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
@@ -275,7 +275,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a> <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -288,7 +288,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -301,7 +301,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -314,7 +314,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -327,7 +327,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -340,7 +340,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>   <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -353,7 +353,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
@@ -366,7 +366,7 @@
                                     <br>This is the course description
                                     <br>Instructor name <span style="margin-left: 20px;"> Platform</span>
                                     <br>
-                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>
+                                                    <br><a class="btn btn-light " asp-controller="Student" asp-action="Review"> Review </a>  <a class="btn btn-light " asp-controller="home" asp-action="course"> Details </a>
                                   </td>
                                   <td class="rate text-right"><span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></span></td>
                                   <td class="price text-right">Free</td>
